# VeoToClip

./: .env.example  .gitignore  Makefile  README.md  prompt.md  pyproject.toml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/web-ui/: README.md  app.js  index.html  styles.css
data/benchmarks/: README.md
docs/: phase-0-bot-c-target-player-identity.md  phase-0-product-workflow.md
docs/architecture/: phase-0-bot-b.md
docs/phase-0/: annotation-schema.md  bot-d-ball-interaction-possession-memo.md  evaluation-benchmark-plan.md  final-phased-roadmap.md  phase-0-bot-b-status.md  phase-0-bot-f-status.md  product-requirements.md  risk-register.md  sub-bot-plan.md  technical-design.md
docs/phases/: phase-1-milestone.md  phase-2-milestone.md
docs/transfer/: current-status.md  finish-plan.md  setup-on-new-machine.md
libs/evaluation/: __init__.py  interfaces.py  reporting.py
libs/identity/: __init__.py  interfaces.py
libs/possession/: __init__.py  baseline.py  interfaces.py
libs/schemas/: __init__.py  core.py
libs/tracking/: __init__.py  baseline.py  interfaces.py
libs/video_io/: __init__.py  avfoundation.py  interfaces.py  visualization.py
scripts/: run_identity_sweep.py  validate_scaffold.py
tests/: __init__.py  test_contracts.py  test_phase1_real_video_dataset_contract.py  test_project_layout.py  test_visualization.py
tests/integration/: test_manifest_contract.py  test_phase1_sweep_artifact_gate_contract.py  test_sweep_report_writer.py
workers/: __init__.py  registry.py
workers/clip_render/: __init__.py  job.py
workers/ingest/: job.py  (+1 more)
(+8 files in other folders)
