[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veotoclip"
version = "0.1.0"
description = "Local-first football video analysis and clip extraction scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex Phase 0 Bot B" }
]
dependencies = []

[project.optional-dependencies]
api = []
vision = []
eval = []
dev = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apps*", "workers*", "libs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["apps", "workers", "libs"]
